--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,25 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
-<table>
+<h1>Books Homepage</h1>
+<table style="border: 2px solid;">
+  <tr>
+    <th>Book ID</th>
+    <th>Book Name</th>
+    <th>Author</th>
+    <th>Publisher</th>
+    <th>Year</th>
+    <th>Edit</th>
+    <th>Delete</th>
+  </tr>
+
   <% @books.each do |book| %>
     <tr>
+      <td><%= book.B_id %></td>
       <td><%= link_to book.B_title, book_path(book) %></td>
+      <td><%= book.Author %></td>
+      <td><%= book.Publisher %></td>
+      <td><%= book.Year %></td>
       <td><%= button_to 'Edit', edit_book_path(book), method: 'get'%></td>
       <td><%= button_to 'Remove', book_path(book), method: 'delete', data: { confirm: 'Are you sure?' } %></td>
   <% end %>
 </table>
-<%= link_to "Add a New book", new_book_path %>
+<br>
+<p>To add a new book, click <%= link_to "here", new_book_path %></p>
