--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,10 @@
 <%# <h1>Books#show</h1>
 <p>Find me in app/views/books/show.html.erb</p> %>
 <%# Print Book %>
-<h1><%= @book.B_title %></h1>
-<h4>"<%= @book.Author %>"</h4>
+<h1>Title:  <%= @book.B_title %></h1>
+<h4>Author: <%= @book.Author %></h4>
+<h4>Book ID: <%= @book.B_id %></h4>
+<h4>Publisher: <%= @book.Publisher %></h4>
+<h4>Year: <%= @book.Year %></h4>
+<%= button_to 'Edit', edit_book_path(@book), method: 'get'%> <br>
 <%= link_to 'Remove', @book, method: :delete, data: { confirm: 'Are you sure?' } %>
